--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,10 +52,9 @@ jobs:
       - name: Debug
         run: |
           dir C:\tools\cygwin\bin
-          C:\tools\cygwin\bin\cygpath -w /usr/include
           C:\tools\cygwin\bin\bash.exe --login -c 'env'
-          C:\tools\cygwin\bin\bash.exe -c 'ls -alh /usr/lib || true'
           C:\tools\cygwin\bin\bash.exe -c 'ls -alh /usr/include || true'
+          C:\tools\cygwin\bin\bash.exe -c 'ls -alh /usr/include/sys || true'
           C:\tools\cygwin\bin\bash.exe -c 'gcc -xc -E -v - || true'
 
       - name: Configure
