--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,13 +45,15 @@ jobs:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: egor-tensin/setup-mingw@v1
-        with:
-          platform: x86
+#      - uses: egor-tensin/setup-mingw@v1
+#        with:
+#          platform: x86
+      - name: Uninstall MinGW
+        run: choco.exe uninstall -y --no-progress mingw
       - uses: egor-tensin/setup-cygwin@v1
         with:
           platform: x86
-          packages: python3 make libpcre-devel cygwin-devel
+          packages: python3-i686 make-i686 libpcre-devel cygwin-devel mingw64-i686-gcc-g++
 
       - name: Debug
         run: |
