--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,12 +48,12 @@ jobs:
 #      - uses: egor-tensin/setup-mingw@v1
 #        with:
 #          platform: x86
-      - name: Uninstall MinGW
-        run: choco.exe uninstall -y --no-progress mingw strawberryperl
+#      - name: Uninstall MinGW
+#        run: choco.exe uninstall -y --no-progress mingw strawberryperl
       - uses: egor-tensin/setup-cygwin@v1
         with:
           platform: x86
-          packages: python3 make libpcre-devel cygwin-devel mingw64-i686-gcc-g++ gcc-core
+          packages: python3 make libpcre-devel cygwin-devel---- -mingw64-i686-gcc-g++--- gcc-core
 
       - name: Debug
         run: |
