--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,8 +48,8 @@ jobs:
 #      - uses: egor-tensin/setup-mingw@v1
 #        with:
 #          platform: x86
-      - name: Uninstall MinGW
-        run: choco.exe uninstall -y --no-progress mingw strawberryperl
+#      - name: Uninstall MinGW
+#        run: choco.exe uninstall -y --no-progress mingw strawberryperl
       - uses: egor-tensin/setup-cygwin@v1
         with:
           platform: x86
@@ -67,9 +67,9 @@ jobs:
       - name: Configure
         run: |
           C:\tools\cygwin\bin\bash.exe -c 'export SHELLOPTS;set -o igncr;./configure --enable-version --enable-symlink --enable-getaddrinfo --enable-atcp --enable-gmcp --enable-option102'
-        env:
-          CFLAGS: -Ic:/tools/cygwin/usr/include
-          LDFLAGS: -Lc:/tools/cygwin/usr/lib
+#        env:
+#          CFLAGS: -Ic:/tools/cygwin/usr/include
+#          LDFLAGS: -Lc:/tools/cygwin/usr/lib
       - name: Build
         run: |
           C:\tools\cygwin\bin\bash.exe -c 'make'
