--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,5 +75,6 @@ jobs:
       - name: Build
         run: |
           C:\tools\cygwin\bin\bash.exe -c 'cat src/tfconfig.h'
+          C:\tools\cygwin\bin\bash.exe -c 'cat config.log'
           C:\tools\cygwin\bin\bash.exe -c 'make'
           C:\tools\cygwin\bin\make.exe
