--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,7 +54,7 @@ jobs:
       - uses: egor-tensin/setup-cygwin@v1
         with:
           platform: x86
-          packages: python3 make libpcre-devel cygwin-devel---- -mingw64-i686-gcc-g++--- gcc-core
+          packages: python3 make libpcre-devel gcc-core
 
       - name: Debug
         run: |
@@ -69,9 +69,6 @@ jobs:
       - name: Configure
         run: |
           C:\tools\cygwin\bin\bash.exe -c './configure --enable-version --enable-symlink --enable-getaddrinfo --enable-atcp --enable-gmcp --enable-option102'
-#        env:
-#          CFLAGS: -Ic:/tools/cygwin/usr/include
-#          LDFLAGS: -Lc:/tools/cygwin/usr/lib
       - name: Build
         run: |
           C:\tools\cygwin\bin\bash.exe -c 'cat src/tfconfig.h'
