--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,7 +54,7 @@ jobs:
       - uses: egor-tensin/setup-cygwin@v1
         with:
           platform: x86
-          packages: gcc-core make libpcre-devel lua-devel python38-devel intl-devel
+          packages: gcc-core make libpcre-devel lua-devel python38-devel libintl-devel
       - name: Debug
         run: |
           dir C:\tools\cygwin\bin
