--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,6 +66,6 @@ jobs:
         run: |
           C:\tools\cygwin\bin\bash.exe -c './configure --enable-version --enable-symlink --enable-atcp --enable-gmcp --enable-option102 --enable-lua --enable-python'
       - name: Build
-        run: C:\tools\cygwin\bin\bash.exe -c 'make'
+        run: make
       - name: Install
-        run: C:\tools\cygwin\bin\bash.exe -c 'make install'
+        run: make install
