--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,10 @@ jobs:
           - "--enable-lua --enable-python"
     
     steps:
+      - name: Set git to use LF
+        run: |
+          git config --global core.autocrlf false
+          git config --global core.eol lf
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         if: runner.os == 'Linux'
@@ -36,8 +40,13 @@ jobs:
         run: |
           brew install lua python@${{ matrix.python-version }}
           echo "/usr/local/opt/python@${{ matrix.python-version }}/bin" >> $GITHUB_PATH
+      - uses: egor-tensin/setup-cygwin@v1
+        if: runner.os == 'Windows'
+        with:
+          platform: x86
+          packages: gcc-core make libpcre-devel lua-devel python${{ matrix.python-version }}-devel libintl-devel
       - name: Configure
-        run: ./configure --enable-version --enable-symlink --enable-atcp --enable-gmcp --enable-option102 ${{ matrix.opts }}
+        run: sh configure --enable-version --enable-symlink --enable-atcp --enable-gmcp --enable-option102 ${{ matrix.opts }}
       - name: Build
         run: make
       - name: Install
@@ -64,7 +73,7 @@ jobs:
           C:\tools\cygwin\bin\bash.exe -c 'gcc -xc -E -v - || true'
       - name: Configure
         run: |
-          bash configure --enable-version --enable-symlink --enable-atcp --enable-gmcp --enable-option102 --enable-lua --enable-python
+          sh configure --enable-version --enable-symlink --enable-atcp --enable-gmcp --enable-option102 --enable-lua --enable-python
       - name: Build
         run: make
       - name: Install
