--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     
     strategy:
-      fail-fast: true
+      fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: [3.7, 3.8, 3.9]
@@ -40,7 +40,8 @@ jobs:
         run: |
           brew install lua python@${{ matrix.python-version }}
           echo "/usr/local/opt/python@${{ matrix.python-version }}/bin" >> $GITHUB_PATH
-      - uses: egor-tensin/setup-cygwin@v1
+      - name: Install packages on Windows
+        uses: egor-tensin/setup-cygwin@v1
         if: runner.os == 'Windows'
         with:
           platform: x86
