--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,8 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: [3.7, 3.8, 3.9]
-        opts: 
+        opts:
+          - "--enable-lua"
           - "--enable-python"
           - "--enable-lua --enable-python"
     
