--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,18 +16,14 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest]
         python-version: [3.7, 3.8, 3.9]
         opts:
           - "--enable-lua"
           - "--enable-python"
-          - "--enable-lua --enable-python"
+#          - "--enable-lua --enable-python"
     
     steps:
-      - name: Set git to use LF
-        run: |
-          git config --global core.autocrlf false
-          git config --global core.eol lf
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         if: runner.os == 'Linux'
@@ -41,14 +37,8 @@ jobs:
         run: |
           brew install lua python@${{ matrix.python-version }}
           echo "/usr/local/opt/python@${{ matrix.python-version }}/bin" >> $GITHUB_PATH
-      - name: Install packages on Windows
-        uses: egor-tensin/setup-cygwin@v1
-        if: runner.os == 'Windows'
-        with:
-          platform: x86
-          packages: gcc-core make libpcre-devel lua-devel python${{ matrix.python-version }}-devel libintl-devel
       - name: Configure
-        run: sh configure --enable-version --enable-symlink --enable-atcp --enable-gmcp --enable-option102 ${{ matrix.opts }}
+        run: ./configure --enable-version --enable-symlink --enable-atcp --enable-gmcp --enable-option102 ${{ matrix.opts }}
       - name: Build
         run: make
       - name: Install
@@ -66,13 +56,9 @@ jobs:
         with:
           platform: x86
           packages: gcc-core make libpcre-devel lua-devel python3-devel libintl-devel
-      - name: Debug
+      - name: Create home dir
         run: |
-          dir C:\tools\cygwin\bin
           C:\tools\cygwin\bin\bash.exe --login -c 'env'
-          C:\tools\cygwin\bin\bash.exe -c 'ls -alh /usr/include || true'
-          C:\tools\cygwin\bin\bash.exe -c 'ls -alh /usr/include/sys || true'
-          C:\tools\cygwin\bin\bash.exe -c 'gcc -xc -E -v - || true'
       - name: Configure
         run: |
           sh configure --enable-version --enable-symlink --enable-atcp --enable-gmcp --enable-option102 --enable-lua --enable-python
