Add build with disabled widechar

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,7 @@ jobs:
         opts:
           - "--enable-lua"
           - "--enable-python"
+          - "--disable-widechar"
 #          - "--enable-lua --enable-python"
     
     steps:
