--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,9 +5,9 @@ on:
     branches: [ '**' ]
   pull_request:
     branches: [ '**' ]
-  schedule:
-    # * is a special character in YAML so you have to quote this string
-    - cron: '22 3 22 * *'
+  #schedule:
+  #  # * is a special character in YAML so you have to quote this string
+  #  - cron: '22 3 22 * *'
     
 jobs:
   build:
