--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,6 +46,8 @@ jobs:
         run: make install
 
   build_windows:
+    # disable for now
+    if: false
     runs-on: windows-latest
     steps:
       - name: Set git to use LF
