--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
-        python-version: ['3.8', '3.9', '3.10']
+        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']
         opts:
           - "--enable-lua"
           - "--enable-python"
@@ -25,8 +25,8 @@ jobs:
 #          - "--enable-lua --enable-python"
     
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         if: runner.os == 'Linux'
         with:
           python-version: ${{ matrix.python-version }}
