--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install packages on Linux
-        run: sudo apt-get install lua5.4 liblua5.4-dev
+        run: sudo apt-get install lua5.4 liblua5.4-dev libpcre3-dev
       - name: Configure
         run: ./configure --enable-version --enable-symlink --enable-atcp --enable-gmcp --enable-option102 ${{ matrix.opts }}
       - name: Build
