--- a/configure.ac
+++ b/configure.ac
@@ -420,7 +420,7 @@ AC_CHECK_LIB(z, inflate, [], [AC_MSG_FAILURE([Cant find inflate in libz])])
 AC_PATH_PROG([PCRE_CONFIG], [pcre2-config], [false])
 if test "$PCRE_CONFIG" != "false"; then
   PCRE_CFLAGS=`$PCRE_CONFIG --cflags`
-  PCRE_LIBS=`$PCRE_CONFIG --libs`
+  PCRE_LIBS=`$PCRE_CONFIG --libs8`
   AC_MSG_NOTICE([using pcre2-config to find extra flags])
   CFLAGS="${CFLAGS} ${PCRE_CFLAGS}"
   LIBS="${LIBS} ${PCRE_LIBS}"
