fix: Fix implicit declaration of strcasecmp
This is required for tf rebirth to build under modern versions
of GCC.

I DID use Claude Code to generate this fix but it is incredibly simple
and I understand it clearly.

That said I totally understand if you want to reject it!

--- a/src/tfconfig.h.in
+++ b/src/tfconfig.h.in
@@ -12,6 +12,11 @@
  * comment causes problems too.)
  */
 
+/* Enable POSIX functions like strdup() */
+#ifndef _DEFAULT_SOURCE
+#define _DEFAULT_SOURCE
+#endif
+
 #define PLATFORM_UNIX 1
 
 #undef MAILDIR
